@@ -78,7 +78,7 @@ decl {\#include "fltk/ask.h"} {}
 
 decl {\#include "fltk/run.h"} {} 
 
-Function {make_ctl_browser(std::string ctl, const char* prefix)} {open return_type {std::string}
+Function {make_ctl_browser(std::string ctl, const char* prefix)} {return_type {std::string}
 } {
   {fltk::Window} {} {
     label {CTL Browser} open
@@ -454,14 +454,20 @@ o->value(-1);}
       code {delete uiMain; uiMain = NULL;} {}
     }
   }
-  class VectorscopeUI {} {
-    Function {make_window(ViewerUI* main)} {private
+  class VectorscopeUI {open
+  } {
+    decl {mrv::ViewerUI* main_;} {}
+    Function {make_window(ViewerUI* main)} {open private
     } {
       {fltk::Window} uiMain {
-        label Vectorscope open
-        xywh {101 340 325 240} hide resizable
+        label Vectorscope
+        user_data this user_data_type {VectorscopeUI*}
+        callback {v->main()->uiView->send( "VectorscopeWindow 0" );
+o->hide();} open selected
+        xywh {104 363 325 240} resizable
         extra_code {// Make the window transient
-o->child_of( main->uiMain );}
+main_ = main;
+o->child_of( main->uiMain );} visible
       } {
         {fltk::Widget} uiVectorscope {
           xywh {4 4 319 231}
@@ -476,14 +482,24 @@ o->child_of( main->uiMain );}
     Function {~VectorscopeUI()} {} {
       code {delete uiMain; uiMain = NULL;} {}
     }
+    Function {main()} {open return_type {mrv::ViewerUI*}
+    } {
+      code {return main_;} {}
+    }
   }
-  class HistogramUI {} {
-    Function {make_window(ViewerUI* main)} {open private
+  class HistogramUI {open
+  } {
+    decl {mrv::ViewerUI* main_;} {}
+    Function {make_window(mrv::ViewerUI* main)} {open private
     } {
       {fltk::Window} uiMain {
         label Histogram
-        xywh {188 170 325 240} hide resizable
+        user_data this user_data_type {HistogramUI*}
+        callback {v->main()->uiView->send( "HistogramWindow 0" );
+o->hide();}
+        xywh {206 308 325 240} hide resizable
         extra_code {// Make the window transient
+main_ = main;
 o->child_of( main->uiMain );
 o->size_range(325, 80);}
       } {
@@ -567,14 +583,17 @@ o->label( o->child( o->value() )->label() );}
     Function {~HistogramUI()} {} {
       code {delete uiMain; uiMain = NULL;} {}
     }
+    Function {main()} {open return_type {mrv::ViewerUI*}
+    } {
+      code {return main_;} {}
+    }
   }
-  class PreferencesUI {open
-  } {
+  class PreferencesUI {} {
     Function {make_window()} {open private
     } {
       {fltk::Window} uiMain {
         label Preferences open
-        xywh {501 286 640 475} resizable visible
+        xywh {504 286 640 475} hide resizable
       } {
         {fltk::WizardGroup} uiWizard {
           label Settings open
@@ -722,7 +741,7 @@ If you try to open several mrViewers with different images, all these images wil
               }
               {fltk::Choice} uiPrefsCropArea {
                 label Crop
-                user_data this user_data_type {mrv::PreferencesUI*} open selected
+                user_data this user_data_type {mrv::PreferencesUI*} open
                 tooltip {Allows you to select a standard cropping area around image.}
                 xywh {15 65 155 25} align 1 labelsize 11
               } {
