@@ -138,6 +138,11 @@ class ImageBrowser : public fltk::Browser
    protected:
      void db_envvars( char*& login, std::string& shot_id );
 
+
+    void send_reel( const mrv::Reel& r );
+    void send_images( const mrv::Reel& r);
+    void send_image( const mrv::media& m );
+
      void change_reel();
      void change_image();
      void adjust_timeline();
